# smartspeech

./: .gitignore  README.md
recognition/v1/: recognition.proto
recognition/v1/cpp/: .clang-format  CMakeLists.txt  Readme.md  config.cpp  config.hpp  recognize.cpp
recognition/v1/cpp/grpc/: client.cpp  client.hpp
recognition/v1/kotlin/: Readme.md  pom.xml
recognition/v1/kotlin/src/main/kotlin/: Main.kt  SmartSpeechGrpcClient.kt  Token.kt
recognition/v1/kotlin/src/main/proto/: recognition.proto  task.proto
recognition/v1/nodejs/: README.md  recognize.js
recognition/v1/python3/: README.md  recognize.py  recognize_async.py
synthesis/v1/: synthesis.proto
synthesis/v1/cpp/: CMakeLists.txt  Readme.md  config.cpp  config.hpp  synthesis.cpp
synthesis/v1/cpp/grpc/: client.cpp  client.hpp
synthesis/v1/python3/: README.md  synthesize.py
task/v1/: storage.proto  task.proto
task/v1/python3/: README.md  task.py
